[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Anim/Hero_Anim_Sprite.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Assets/Scripts/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 8.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "fall"
playing = true

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="FireballLocation" type="Position2D" parent="."]
position = Vector2( 16, 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 180
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
